# boss-AutoGUI

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  urls.txt
.github/workflows/: lint.yml
.zed/: settings.json
