[project]
name = "boss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyautogui>=0.9.54",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "scipy>=1.17.1",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.14"
strict = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.13",
]
